--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ text-decoration: underline;
   margin: 5px 0;
 }
 .home .home-content .text-3 span {
-  color:  rgba(229, 19, 156, 0.918);
+  color:rgb(247, 132, 190);
   font-weight: 500;
 }
 .home .home-content a {
