--- a/style.css
+++ b/style.css
@@ -340,24 +340,22 @@ text-decoration: underline;
   width: 90%;
   margin: auto;
 }
-.card1{
-  
+.card1 {
   margin: auto;
-  /* border: 1px solid orange; */
-  /* max-height: 150px; */
-  box-shadow: rgba(233, 9, 222, 0.3) 0px 1px 2px 0px, rgba(255, 59, 213, 0.15) 0px 1px 3px 1px;
+  box-shadow: rgba(229, 19, 156, 0.918) 0px 1px 2px 0px,
+  rgba(94, 5, 63, 0.918) 0px 1px 3px 1px;
   margin-bottom: 3%;
-
 }
-.gimg1{
-  width: 500px;
+.gimg1 {
+  width: 600px;
   margin: auto;
-  /* height: 150px; */
+  
 }
-.gimg{
+.gimg {
   width: 100%;
   margin: auto;
   height: 250px;
+
 }
 .pbtn {
   width: 90%;
@@ -477,6 +475,7 @@ padding: 0.5rem;
 border-radius: 1rem;
 text-align:  center;
 }
+
 .skills-content{
   width: 100%;
   display: grid;
@@ -753,6 +752,7 @@ footer span a:hover {
 }
 
 /* responsive media query start */
+/* responsive media query start */
 @media (max-width: 1104px) {
   .about .about-content .left img {
     height: 350px;
@@ -764,19 +764,15 @@ footer span a:hover {
   .max-width {
     padding: 0 50px;
   }
-  
 }
 @media (max-width: 947px) {
-  .skills-content{
+  .skills-content {
     width: 100%;
- display: flex;
- flex-wrap: wrap;
- margin: auto;
- justify-content: space-around;
- }
-/*  */
-
-
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: space-around;
+  }
 
   .menu-btn {
     display: block;
@@ -792,9 +788,7 @@ footer span a:hover {
     width: 100%;
     left: -100%;
     top: 0;
-    /* background: rgba(17, 17, 17, 0.911); */
     background: rgba(17, 17, 17, 0.911);
-
     text-align: center;
     padding-top: 80px;
     transition: all 0.3s ease;
@@ -803,8 +797,8 @@ footer span a:hover {
     left: 0;
   }
   .navbar .menu li {
-    display: block;
-    /* color: red; */
+    display: block; 
+     /* color: red; */
   }
   .navbar .menu li a {
     display: inline-block;
@@ -851,20 +845,17 @@ footer span a:hover {
 }
 
 @media (max-width: 690px) {
- 
-  .skills-content{
+  .skills-content {
     width: 100%;
- display: flex;
- flex-wrap: wrap;
- margin: auto;
- justify-content: space-around;
- }
- /*  */
-.sc .card{
-  margin-bottom: 3rem;
-}
-
-
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: space-around;
+  }
+  /*  */
+  .sc .card {
+    margin-bottom: 3rem;
+  }
 
   .max-width {
     padding: 0 23px;
@@ -883,63 +874,57 @@ footer span a:hover {
     width: 100%;
   }
   /*  */
-.serv-content .gimg1 {
+  .serv-content .gimg1 {
     width: 100%;
     height: 150px;
-
   }
-.serv-content .gcal {
+  .serv-content .gcal {
     width: 100%;
     height: 50px;
-
-
   }
-.serv-content .gimg {
+  .serv-content .gimg {
     width: 100%;
     height: 150px;
-
   }
-  
+
   .column {
     margin-top: 1rem;
   }
 }
 
 @media (max-width: 500px) {
-  .tc{
+  .tc {
     line-height: 13px;
   }
-  .chkr{
+  .chkr {
     line-height: 13px;
   }
-  .itc{
+  .itc {
     height: 90px;
-
   }
 
-/* skills */
-.skills-content{
-   width: 100%;
-display: flex;
-flex-wrap: wrap;
-margin: auto;
-justify-content: space-around;
-}
-.simg {
-  width: 99%;
-height: 60px;
-}
-.sbox{
-  width: 70px;
-  /* border: 2px solid teal; */
-  font-size: small;
-  border-radius: 0.5rem;
-  row-gap: 0.5px;
-
-}
-.skills-content>.cards{
-  border: 1px solid red;
-}
+  /* skills */
+  .skills-content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: space-around;
+  }
+  .simg {
+    width: 99%;
+    height: 60px;
+  }
+  .sbox {
+    width: 70px;
+    /* border: 2px solid teal; */
+    font-size: small;
+    border-radius: 0.5rem;
+    row-gap: 0.5px;
+  }
+  .skills-content > .cards {
+    border: 1px solid red;
+  }
 
   .home .home-content .text-2 {
     font-size: 50px;
@@ -972,13 +957,20 @@ height: 60px;
   }
   .column {
     margin-top: 1rem;
-  
   }
 
-
-  .gcal{
+  .gcal {
     width: 100%;
     height: 100px;
     border: 1px sold red;
   }
+ 
+}
+.cardcal,
+.cardgraph {
+  width: 100%;
+  padding: 10px;
+}
+.cardgraph {
+  height: fit-content;
 }
