--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+   
+
 }
 * {
   margin: 0;
@@ -46,7 +52,7 @@ section {
 footer {
   font-family: "Poppins", sans-serif;
   /* background-color: rgba(0, 0, 0, 0.849); */
-  background-image: url("https://images.rawpixel.com/image_400/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjk2MC1uaW5nLTMwLmpwZw.jpg");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2jR33s80-CFM2T5jYtsV1AzniXxAfLFkYqg&usqp=CAU");
   background-size: cover;
   background-attachment: fixed;
 }
@@ -195,8 +201,11 @@ text-decoration: underline;
 .home {
   padding-top: 10rem;
   display: flex;
-  background: url("./images/background-img2.jpg")
-    no-repeat center;
+  /* background: url("./images/background-img2.jpg")
+    no-repeat center; */
+    background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") top right no-repeat;
+    z-index: -1;
+   
   background-color: #111;
   height: 100vh;
   color: #fff;
@@ -252,7 +261,7 @@ text-decoration: underline;
 /* about */
 
 .about {
-  background-image: url("https://images.rawpixel.com/image_400/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjk2MC1uaW5nLTMwLmpwZw.jpg");
+background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2jR33s80-CFM2T5jYtsV1AzniXxAfLFkYqg&usqp=CAU");
   background-size: cover;
   background-attachment: fixed;
   /* background-image: url("https://images.unsplash.com/photo-1523878288860-7ad281611901?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"); */
@@ -308,7 +317,8 @@ text-decoration: underline;
 .services,
 .project {
   color: #fff;
-  background: #111;
+  /* background: #111; */
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")  
 }
 .services .title::before,
 .project .title::before {
@@ -738,7 +748,7 @@ gap: 2rem;
 }
 /* footer section styling */
 footer {
-  background: #111;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); 
   padding: 15px 23px;
   color: #fff;
   text-align: center;
