--- a/style.css
+++ b/style.css
@@ -755,7 +755,7 @@ text-align:  center;
   box-shadow:  rgba(22, 21, 22, 0.918) 6px 10px 40px -12px;
 }
 #text{
-  color: black;
+  color: white;
   padding-bottom: 3px;
   
 }
