--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@ text-align:  center;
 .project .carousel .card:hover {
   background: rgba(229, 19, 156, 0.918);
   color:white;
-  /* change */
+  
 }
 .project .carousel .card .box {
   display: flex;
@@ -1077,6 +1077,6 @@ footer span a:hover {
   width: 100%;
   padding: 10px;
 }
-.cardgraph {
+/* .cardgraph {
   height: fit-content;
-}
+} */
