--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+ /* background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") top right no-repeat; */
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,6 +10,7 @@
 
 }
 * {
+
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -124,7 +126,11 @@ section .title::after {
   box-shadow: rgba(230, 0, 255, 0.1) 0px 20px 25px -5px,
     rgba(221, 53, 224, 0.2) 0px 10px 10px -5px;
 }
-.navbar .logo a span {
+.navbar .max-width .logo img {
+  height:50px;
+  width:60px;
+  box-shadow:  rgba(229, 19, 156, 0.918) 2px 2px 20px 2px;
+  border-radius: 50%;
   color:  rgba(229, 19, 156, 0.918);
   transition: all 0.3s ease;
 }
@@ -208,16 +214,34 @@ text-decoration: underline;
    
   background-color: #111;
   height: 100vh;
-  color: #fff;
+  color: black;
   min-height: 500px;
   background-size: cover;
   background-attachment: fixed;
   font-family: "Ubuntu", sans-serif;
 }
 .home .max-width {
-  width: 100%;
+  width: au;
   display: flex;
+  border:10px solid red;
+  border-radius: 30px;
+  padding:50px 50px 50px 50px;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2jR33s80-CFM2T5jYtsV1AzniXxAfLFkYqg&usqp=CAU");
+  background-size: cover;
+  background-attachment: fixed;
+  border: 2px solid  rgba(229, 19, 156, 0.918) !important;
+  transition: all 0.8s ease;
+  box-shadow:  rgba(229, 19, 156, 0.918) 0px 10px 40px -12px;
+
 }
+/* .home .max-width:hover{
+  transform: scale(1.20);
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")  ;
+  border: 2px solid  rgba(229, 19, 156, 0.918) !important;
+  transition: all 0.8s ease;
+  color:white;
+  box-shadow:  rgba(229, 19, 156, 0.918) 0px 10px 40px -12px;
+} */
 .home .max-width .row {
   margin-right: 0;
 }
@@ -237,12 +261,12 @@ text-decoration: underline;
   margin: 5px 0;
 }
 .home .home-content .text-3 span {
-  color:rgb(247, 132, 190);
+  color:rgb(242, 0, 169);
   font-weight: 500;
 }
 .home .home-content a {
   display: inline-block;
-  background:  rgba(229, 19, 156, 0.918);
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") top right no-repeat;
   color: #fff;
   font-size: 25px;
   padding: 8px 36px 10px 36px;
@@ -266,7 +290,50 @@ background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2j
   background-attachment: fixed;
   /* background-image: url("https://images.unsplash.com/photo-1523878288860-7ad281611901?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"); */
 }
+ .title .span{
+  border:10px solid red;
+  padding:15px 15px 15px 15px;
+  margin: 10px;
+  text-align: center;
+  border: 0px;
+  font-weight: 800;
+  box-shadow: 0px 0px 14px -7px #d81d9a;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 100% ;
+  color: white;
+  border-radius: 10px;
+  display: inline-block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow:  rgba(229, 19, 156, 0.918) 2px 2px 20px 2px;
+  background-color: rgb(253, 0, 160);;
+  cursor: pointer;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") top right no-repeat;
+}
+.title  .spa{
+  border:10px solid red;
+  padding:15px 15px 15px 15px;
+  margin: 10px;
+  text-align: center;
+  border: 0px;
+  font-weight: 800;
+  box-shadow: 0px 0px 14px -7px #d81d9a;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 100% ;
+  color: white;
+  border-radius: 10px;
+  display: inline-block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow:  rgba(229, 19, 156, 0.918) 2px 2px 20px 2px;
+  background-color: rgb(253, 0, 160);;
+  cursor: pointer;
 
+ 
+
+}
 .about .about-content .left {
   width: 45%;
 }
@@ -358,14 +425,6 @@ background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2j
   /* margin-bottom: 10px;  */
   
 }
-.services .title::before,
-.project .title::before {
-  background: #fff;
-}
-.services .title::after{
-  background: #111;
-  content: "Statistics";
-}
 
 .services .serv-content .card {
   width: calc(33% - 20px);
@@ -378,7 +437,7 @@ background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2j
   border-radius: 1rem;
 }
 
-/* /// */
+
 .img {
   width: 100%;
   border-radius: 1rem;
@@ -437,7 +496,7 @@ background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2j
   background: none;
 }
 .text{
-  color:rgba(229, 19, 156, 0.918);
+  color:white;
 }
 
 
@@ -474,45 +533,38 @@ background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2j
  border-radius: 1rem;
 }
 .gb{
-  box-shadow: white 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 75px inset;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 .bs{
-  box-shadow: white 0px 2px 4px, rgba(119, 73, 224, 0.932) 0px 7px 13px -3px, rgba(34, 24, 168, 0.671) 0px -3px 75px inset;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 .html{
-  box-shadow: white 0px 2px 4px, rgba(119, 73, 224, 0.932) 0px 7px 13px -3px, rgba(221, 24, 93, 0.918) 0px -3px 75px inset;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 .css{
-  box-shadow: white 0px 2px 4px, rgba(23, 112, 230, 0.932) 0px 7px 13px -3px, rgba(39, 93, 207, 0.76) 0px -3px 75px inset;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 .js{
-  box-shadow: white 0px 2px 4px, rgba(196, 218, 4, 0.932) 0px 7px 13px -3px, rgba(243, 224, 49, 0.986) 0px -3px 75px inset;
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
  text-align: center;
 }
 .ijs{
-  box-shadow: rgba(210, 212, 41, 0.822) 1px 2px 4px
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 .react{
-  box-shadow: white 0px 2px 4px, rgb(65, 205, 240) 0px 7px 13px -3px, rgba(28, 175, 219, 0.842) 0px -3px 75px inset;
-}
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
 .rdx{
-  box-shadow: white 0px 2px 4px, rgba(108, 60, 219, 0.911) 0px 7px 13px -3px, rgba(157, 126, 240, 0.952) 0px -3px 75px inset;
-}
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
 .dsa{
-  box-shadow: white 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 75px inset;
-}
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
 .chkr{
-  box-shadow: white 0px 2px 4px, rgba(10, 173, 138, 0.911) 0px 7px 13px -3px, rgba(27, 226, 183, 0.849) 0px -3px 75px inset;
-}
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
 .nj{
-  box-shadow: white 0px 2px 4px,  rgb(51, 245, 51) 0px 7px 13px -3px, rgb(162, 248, 34) 0px -3px 75px inset;
-}
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
 .pm{
-  box-shadow: white 0px 2px 4px,  rgba(229, 110, 19, 0.918) 0px 7px 13px -3px,  rgba(235, 123, 19, 0.918) 0px -3px 75px inset;
-}
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
 .tc{
-  box-shadow: white 0px 2px 4px,  rgb(131, 7, 131) 0px 7px 13px -3px, rgb(220, 105, 243) 0px -3px 75px inset;
-/* line-height:1rem; */
+  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");/* line-height:1rem; */
 
 }
 .sc > .card{
@@ -527,7 +579,7 @@ text-align:  center;
 }
 .sbox:hover {
   transform: scale(1.20);
-  background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")  ;
+  /* background: #040404 url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")  ; */
   border: 2px solid  rgba(229, 19, 156, 0.918) !important;
   transition: all 0.8s ease;
   box-shadow:  rgba(229, 19, 156, 0.918) 0px 10px 40px -12px;
@@ -545,10 +597,6 @@ text-align:  center;
   /* border: 2px solid red; */
 }
 
-
-.skills .title::after {
-  content: "what i know";
-}
 
 /* projects */
 .tech{
@@ -568,9 +616,6 @@ text-align:  center;
 }
 
 
-#project .title::after {
-  content: "see my work";
-}
 .project .carousel .card {
   background: rgba(223, 77, 169, 0.404);
   border-radius: 6px;
@@ -606,13 +651,7 @@ text-align:  center;
 
 
 }
-#project .serv-content {
-  /* border: 1px solid red; */
-  width: 100%;
-}
 
-
-/*  */
 .repo-links {
   display: flex;
   justify-content: space-between;
@@ -688,10 +727,6 @@ text-align:  center;
   height: 120px;
 }
 
-/* contact section styling */
-.contact .title::after {
-  content: "get in touch";
-}
 
 .contact .contact-content .column {
   width: calc(50% - 30px);
